fix: close remaining gaps across the app
Backend:
- CORS: allowedOrigins now configurable via CORS_ALLOWED_ORIGINS env var
- SpeechController: track recording metadata to recording_uploads table after each score
- RecordingUpload entity + repository wired in

Frontend:
- ShadowingMode + YouTubeShadowingMode: show user-visible error when score API fails (was silent console.error)
- monitoring.ts: structured JSON logging in production, Sentry-ready comments

Docs/config:
- Add ROADMAP.md, SPEC.md, checklist.md, docker-compose.yml, flashcardPlan.md
- Update .gitignore to exclude .claude/, frontend logs, tsbuildinfo